# Python

./: README.md  README2.md  RUST.py  a100_request.py  requirements.txt
C_Binding/simple_wrapper/: setup.py
C_Binding/simple_wrapper/simple_hello/: __init__.pyi  _hello_core.c  hello.pyi
Cpp_Binding/pybind11_hello/src/: cpp_hello.cpp  cpp_hello.pyi
basic/: a02_keyword.py  a04_print.py  a08_str_indexing.py  a101_wrapper_function.py  a102_decorator.py  a103_time_decorator.py  a104_multithreading.py  a105_asynciotasks.py  a106_asyncioHttp.py  a107_request.py  a111_json_serialization.py  a112_yaml_serialization.py  a113_main_argument.py  a114_logger.py  a115_matplotlib_graph.py  a116_c_binding.py  a19.py  a21_list.py  a22_list_function.py  a23_list_method.py  a30_list_comprehension.py  a31_function.py  a32_argument.py  a33_default_argument.py  a35_dictionary.py  a35_variable_length_keyword_argument.py  a42_file_write.py  a43_file_read.py  a47_try_exception.py  a63_class_student.py  a64_class_method.py  a65_isinstance.py  a66_special_method.py  a67_class_variable.py  a68_Destructor.py  a70_property.py  a71_class_inheritance.py  a72_multiple_inheritance.py  a80_fibonacci.py  a81_fibonacci_chche.py  (+11 more)
basic/test_package/: __init__.py  module_a.py  module_b.py
basic/uv_test/: pyproject.toml
